# Pega_voo

./: .env.example  .gitignore  .gitmodules  Docker-compose.yml  Dockerfile  README.md  docker-compose.yml  mise.local.toml
docs/: init.sql
src/api/: .env.example  API_README.md  pyproject.toml  run_dev.py  test_migrations.py
src/api/app/: __init__.py  main.py
src/api/app/config/: __init__.py  auth.py  database.py  settings.py
src/api/app/models/: __init__.py  models.py
src/api/app/routes/: __init__.py  auth.py  reservas.py  usuarios.py  voos.py
src/api/app/schemas/: __init__.py  schemas.py
src/api/migration/: env.py
src/api/migration/versions/: e4060a6b3944_initial_schema_with_usuario_voo_and_.py
src/decolar/: app.json  package-lock.json  package.json
src/tinto_api/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
src/tinto_api/docs/: DER.drawio  MODELS.md  der.md
src/tinto_api/tests/: README.md  conftest.py  test_health_resposnse.py
src/tinto_api/tinto/: __init__.py  celery_app.py  main.py
src/tinto_api/tinto/db/: Dockerfile.postgres  docker-compose.postgres.yml  postgres.sh  postgresql.conf
src/tinto_api/tinto/migrations/: env.py
src/tinto_api/tinto/migrations/versions/: 001_initial_users_schema.py  001_remove_purchase_id_from_tickets.py  002_add_flight_booking_models.py  003_refactor_flights_tickets_schema.py  004_remove_purchase_history_table.py  005_simplify_tickets_table.py  006_add_flights_metadata_columns.py  007_enable_unaccent_extension.py  008_sdd_seat_price_change_seat_enum.py  009_add_seat_enum.py  010_add_seat_number_to_tickets.py  011_add_boarding_arrival_time.py  012_make_purchase_id_nullable.py  1b5f3f092bec_new_stable_state.py  677b271bf48e_add_flight_booking_models.py  71a09dee0ad7_add_seat_price_column.py  8913b06f344c_added_flight_stop_counter.py  8ec4ed8b1a58_der_update.py  a3272da0f761_change_seat_enum.py  b3d627dbec93_users_schema.py  dfd5e10710e3_remove_history_purchase.py  e2f46787ed41_baseline_v2.py
src/tinto_api/tinto/models/: __init__.py  airline.py  flight.py  person.py  purchase_history.py  rec_token.py  seat.py  ticket.py  ticket_passenger.py  ticket_status_log.py
src/tinto_api/tinto/routes/: __init__.py  acc_recovery.py  airlines.py  authentication.py  flights.py  persons.py  purchase_history.py  tickets.py
src/tinto_api/tinto/schemas/: __init__.py  airline.py  flight.py  person.py  purchase_history.py  rec_token.py  seat.py  ticket.py  ticket_status_log.py
src/tinto_api/tinto/tasks/: __init__.py  check_payment.py  checkout.py  send_confirmation_email.py  send_greeting_email.py  send_mail.py  send_payment_error_email.py  send_recovery_code.py
src/tinto_api/tinto/utils/: __init__.py  auth.py  celery_app.py  database.py  hermes.py  key_server.py  logger.py  logging_config.py  minerva.py  security.py  types.py
src/web/: .env.example  Dockerfile  README.md  app.vue  (+5 more)
(+97 files in other folders)
